--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,6 +58,6 @@ jobs:
       - name: Aspirate Init
         working-directory: src/BlazorOnK8s.AppHost
         run: | 
-          dotnet tool run aspirate init --non-interactive --container-registry $ACR_SERVER
+          dotnet tool run aspirate init --non-interactive --container-registry $ACR_SERVER --container-image-tag ${{ github.sha }}
           dotnet tool run aspirate generate --non-interactive --disable-secrets --include-dashboard --image-pull-policy Always --container-repository-prefix $ACR_REPO
-          dotnet tool run aspirate apply --non-interactive --disable-secrets --kube-context $AKS_NAME
+          dotnet tool run aspirate apply --non-interactive --disable-secrets --kube-context $AKS_NAME --rolling-restart
