--- a/src/BlazorOnK8s.AppHost/BlazorOnK8s.AppHost.csproj
+++ b/src/BlazorOnK8s.AppHost/BlazorOnK8s.AppHost.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.2.1" />
+    <PackageReference Include="Aspire.Hosting.Kubernetes" Version="9.4.1-preview.1.25408.4" />
     <PackageReference Include="Aspire.Hosting.SqlServer" Version="9.4.1" />
   </ItemGroup>
 
