--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build & Deploy with Aspirate
+name: Build & Deploy
 
 on:
   push:
@@ -10,10 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       ACR_NAME: ${{ secrets.ACR_NAME }}
-      ACR_REPO: ${{ secrets.ACR_REPO }}
       ACR_SERVER: ${{ secrets.ACR_SERVER }}
       AKS_NAME: ${{ secrets.AKS_NAME }}
-      AKS_RG: ${{ secrets.AKS_RG }}
+      RESOURCE_GROUP: ${{ secrets.RESOURCE_GROUP }}
       AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
       IMAGE_NAME: blazoronk8s
     steps:
@@ -39,18 +38,22 @@ jobs:
       #     terraform apply -auto-approve tfplan
 
       # Pull kubeconfig from AKS
-      # - name: Get AKS credentials
-      #   run: |
-      #     az aks get-credentials --resource-group $AKS_RG --name $AKS_NAME --overwrite-existing
+      - name: Get AKS credentials
+        run: az aks get-credentials --resource-group $RESOURCE_GROUP --name $AKS_NAME --overwrite-existing
 
       # Log in to ACR
       - name: Azure Container Registry Login
         run: az acr login --name $ACR_NAME
 
+      # Set up .NET
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '9.0.x'
+
+      # Restore dependencies
+      - name: Restore .NET Tools
+        run: dotnet tool restore
 
       - name: Build and Publish Image
         run: |
@@ -63,21 +66,21 @@ jobs:
           --property:ContainerRepository=$IMAGE_NAME \
           --property:ContainerImageTag=${{ github.sha }}
 
-      # - name: Generate artifacts with aspire
-      #   run: dotnet aspire publish -o aspirate-output
+      - name: Generate artifacts with aspire
+        run: dotnet aspire publish -o aspire-output
 
       # - name: Patch generated values to exact image
       #   env:
       #     IMAGE: ${{ env.ACR_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
       #   run: |
-      #     sed -i "s/blazoronk8s:latest/${IMAGE//\//\\/}/" "aspirate-output/values.yaml"
+      #     sed -i "s/blazoronk8s:latest/${IMAGE//\//\\/}/" "aspire-output/values.yaml"
 
-      # - name: Install Helm
-      #   uses: azure/setup-helm@v4.3.0
+      - name: Install Helm
+        uses: azure/setup-helm@v4.3.0
 
-      # - name: Helm Deploy
-      #   env:
-      #     IMAGE: ${{ env.ACR_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-      #   run: |
-      #     helm upgrade --install aspire ./aspirate-output --namespace default
-      #     --set parameters.blazoronk8s.blazoronk8s_image=$IMAGE
+      - name: Helm Deploy
+        env:
+          IMAGE: ${{ env.ACR_SERVER }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+        run: |
+          helm upgrade --install aspire ./aspire-output --namespace default \
+          --set parameters.blazoronk8s.blazoronk8s_image=$IMAGE
